<resources>
    <string name="app_name">Restaurant</string>
    <string name="click_to_order">CLICK TO ORDER</string>
    <string name="food_item">Food Item</string>
    <string name="click_on_the_image_for_detail">Click on the image for detail and selection</string>
    <string name="vegetable_noodles">Vegetable noodles</string>
    <string name="miyagi_sushi">Miyagi sushi</string>
    <string name="rio_roll">Rio Roll</string>
    <string name="sanchai_salad">Sanchai salad</string>
    <string name="drink_item">Drink Item</string>
    <string name="click_on_the_image_detail">Click on the image for detail and selection</string>
    <string name="coca_cola">Coca-Cola</string>
    <string name="fuzetea">Fuzetea</string>
    <string name="click_to_continue_the_order_details">Click to continue the order details</string>
    <string name="reservation_options">Reservation Details</string>
    <string name="select_the_number_of_diners">Select the number of diners:</string>
    <string name="choose_time_of_reservation">Choose time</string>
    <string name="select_payment_method">Select payment method:</string>
    <string name="reserve_sits">Order Details</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="cash">Cash</string>
    <string name="menu">Menu</string>
    <string name="sushi_restaurant">SUSHI BAR</string>
    <string name="cola">Coca-Cola</string>
    <string name="price_4">Price: 4$</string>
    <string name="fusetea">Fusetea</string>
    <string name="price4">Price: 4$</string>
    <string name="sanchaiSalad">Sanchai salad</string>
    <string name="lettuce_carrot_hairs_white_and_purple_cabbage_peanuts_in_cilantro_vinaigrette_sauce_and_crispy_sweet_potato_on_top">Lettuce, carrot hairs, white and purple cabbage, peanuts in cilantro vinaigrette sauce and crispy sweet potato on top\n</string>
    <string name="price_13">Price: 13$</string>
    <string name="salmon_baked_in_teriyaki_cucumber_tamago_and_canapes_in_a_chive_sauce_with_a_mixture_of_avocado_fresh_chili_green_onion_and_lemon">Salmon baked in teriyaki, cucumber, tamago and canapes in a chive sauce with a mixture of avocado, fresh chili, green onion and lemon\n</string>
    <string name="rioRoll">Rio Roll</string>
    <string name="price_14">Price: 14$</string>
    <string name="fried_salmon_cucumber_and_fried_onion">Fried salmon, cucumber and fried onion\n</string>
    <string name="covered_with_avocado_and_sweet_potato_tempura_crispy_sweet_potato_chives_peanuts_teriyaki_spicy_mayonnaise_and_cilantro_vinaigrette_sauce">Covered with avocado and sweet potato, tempura, crispy sweet potato, chives, peanuts, teriyaki, spicy mayonnaise and cilantro vinaigrette sauce.\n</string>
    <string name="price14">Price: 14$</string>
    <string name="miyagiSushi">Miyagi sushi</string>
    <string name="vegetableNoodles">Vegetable noodles</string>
    <string name="egg_noodles_corn_carrot_strips_white_cabbage_and_mushrooms_in_soy_sauce_garlic_ginger_and_sesame_oil_chinese_sprouts_on_top">Egg noodles, corn, carrot strips, white cabbage and mushrooms in soy sauce, garlic, ginger and sesame oil, Chinese sprouts on top.\n</string>
    <string name="price_15">Price: 15$</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_successfully_placed">Order Successfully Placed</string>
    <string name="bon_appetit">Bon Appetit!</string>
    <string name="order">Order</string>
    <string name="back">Back</string>
    <string name="details_order">Order Details</string>
    <string name="order_time">"Order Time : "</string>
    <string name="payment_method">"Payment Method: "</string>
    <string name="amount_of_diners">"Amount Of Diners: "</string>
    <string name="creditcard">Credit Card</string>
    <string name="debitcard">Debit Card</string>
    <string name="cashh">Cash</string>
    <string name="not_chosen">not Chosen</string>
    <string name="cassh">Cash</string>
    <string name="debit_cardd">Debit Card</string>
    <string name="credit_cardd">Credit Card</string>
    <string name="selected">"selected "</string>
    <string name="diners">" diners"</string>
    <string name="your_invitation">The Ordered Items:</string>
    <string name="sanchaisalad">" Sanchai Salad"</string>
    <string name="add_to_order">Add to order</string>
    <string name="cancel">Cancel</string>
    <string name="added">"Item added to order"</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="name">Your Name:</string>
    <string name="notes">Special Notes:</string>
    <string name="type_your_name">Enter your name</string>
    <string name="_150_characters">150 characters</string>
    <string name="you_didn_t_select_any_items">You did not select any items</string>
    <string name="the_order_items">The Order Items:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10+</string>
    <string name="rate_your_satisfaction">Rate Your Satisfaction:</string>
    <string name="submit">Submit</string>
    <string name="your_rating">"Your Rating"</string>
    <string name="thankyou">,Thank You:)</string>
    />
</resources>