<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFinal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:gravity="center|top">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/baseline_done_24"
                android:id="@+id/src">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thank_you"
                android:id="@+id/tanks"
                android:textSize="50dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_successfully_placed"
                android:gravity="center"
                android:id="@+id/success"
                android:textSize="30dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/bon_appetit"
                android:id="@+id/apetit"
                android:textSize="30dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_your_satisfaction"
                android:gravity="center"
                android:textSize="28dp"
                android:id="@+id/textRate"
                android:textColor="@color/orange">

            </TextView>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingbar">

            </RatingBar>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRate"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:backgroundTint="@color/black">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/exit"
                android:drawableLeft="@drawable/baseline_exit_to_app_24"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/green"
                android:id="@+id/exit">
            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>