<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_order"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:id="@+id/detailsTitle"
        android:textSize="30dp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/detailsTitle"
        android:layout_marginTop="15dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nam"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/the_order_items"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/items"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_time"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeOrder"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_of_diners"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/diners"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/payment"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textSize="20dp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notes"
                    android:layout_marginStart="15dp"
                    android:textSize="18dp">
                </TextView>
                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:layout_marginStart="15dp"
                            android:backgroundTint="@color/orange"
                            android:text="@string/back"
                            android:id="@+id/btnBack"
                            android:layout_weight="1">
                        </Button>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4">
                        </Space>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:id="@+id/btnOrder"
                            android:backgroundTint="@color/orange"
                            android:text="@string/order"
                            android:layout_weight="1">
                        </Button>
                    </LinearLayout>
                </RelativeLayout>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/orderdetails">
                </ImageView>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>



</LinearLayout>